2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Revise configuration report for intelligibility.
	Add report of C++ compiler and flags used: we compile much more
	C++ than C code so this seems appropriate.  Report Perl
	interpreter version so that we can collect build reports and
	turn the ratchet past Perl 5.6.1 at some point.  Fix X11
	"resources" misnomer (application defaults are what is meant).
	Rephrase generally.

2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* Makefile.am (EXTRA_DIST): Ship "ChangeLog.122" in distribution
	archive.  Overlooked in commit c11995df16, 19 Feburary 2021.

2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grotty/tests/basic_latin_glyphs_map_correctly.sh:
	Fix portability problem: POSIX says that "od -c" (and "od -t c")
	are supposed to emit printing characters as defined by the
	underlying locale, but GNU coreutils od doesn't do this and
	macOS od does.  Set `LC_ALL` to "C" when running it to force
	3-digit octal reporting of characters with their eighth bit set.

	Fixes <https://savannah.gnu.org/bugs/?62357>.  Thanks to John
	Gardner for the report.  Also see <https://pubs.opengroup.org/\
	onlinepubs/9699919799/utilities/od.html>.

2022-05-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* INSTALL.extra (In Case of Trouble): Add advice on using the
	test suite, particularly if it fails.

	Fixes <https://savannah.gnu.org/bugs/?62478> (one hopes).

2022-05-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/groff.texi (Input Line Traps):  Expand discussion.  The
	`it` and `itc` requests count neither input lines (strictly) nor
	text lines.  Instead, they count input lines that _directly
	produce fotmatted output_ (and, in the case of `itc`, are not
	"interrupted" or continued with the `\c` escape sequence).  This
	is useful--empty requests and requests that don't put nodes on